Added the html backbone of the site

--- a/index.html
+++ b/index.html
@@ -5,7 +5,13 @@
         <link rel="stylesheet" href="./style.css">
     </head>
     <body>
-        <h1></h1>
+        <h1>Generate a <br>
+             random password</h1>
+        <p>Never use an insecure password again.</p>
+        <button>Generate Passwords</button>
+        <hr>
+        <div id="password-one"></div>
+        <div id="password-two"></div>
         <script src="index.js"></script>
     </body>
 </html>
