Added color scheme to match the assignment

--- a/index.html
+++ b/index.html
@@ -3,15 +3,17 @@
     <head>
         <meta lang="en">
         <link rel="stylesheet" href="./style.css">
+        <script src="index.js"></script>
     </head>
     <body>
-        <h1>Generate a <br>
-             random password</h1>
-        <p>Never use an insecure password again.</p>
-        <button>Generate Passwords</button>
-        <hr>
-        <div id="password-one"></div>
-        <div id="password-two"></div>
-        <script src="index.js"></script>
+        <div class="container">
+            <h1>Generate a </h1>
+                <h1 id="green-h1">random password</h1>
+            <h4 id="sentence">Never use an insecure password again.</h4>
+            <button>Generate Passwords</button>
+            <hr>
+            <div id="password-one">doigpearh</div>
+            <div id="password-two">lajtpwie4</div>
+        </div>
     </body>
 </html>
