--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
     </head>
     <body>
         <div class="container">
-            <h1>Generate a </h1>
-                <h1 id="green-h1">random password</h1>
-            <h4 id="sentence">Never use an insecure password again.</h4>
+            <h1>Generate a
+                <br>
+            random password</h1>
+            <p id="sentence">Never use an insecure password again.</p>
             <button>Generate Passwords</button>
             <hr>
             <div id="password-one">doigpearh</div>
