Modified the spacing and styling on the buttons and password boxes

--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html>
     <head>
         <meta lang="en">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;400&family=Karla:wght@400;500;600;700;800&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="./style.css">
         <script src="index.js"></script>
     </head>
@@ -13,8 +16,10 @@
             <p id="sentence">Never use an insecure password again.</p>
             <button>Generate Passwords</button>
             <hr>
-            <div id="password-one">doigpearh</div>
-            <div id="password-two">lajtpwie4</div>
+            <div class="password-container">
+                <div id="password-one">doigpearh</div>
+                <div id="password-two">lajtpwie4</div>
+            </div>
         </div>
     </body>
 </html>
