Modified the h1 color and the hr border color

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="container">
             <h1>Generate a
                 <br>
-            random password</h1>
+            <span class="h1-color">random password</span></h1>
             <p id="sentence">Never use an insecure password again.</p>
             <button>Generate Passwords</button>
             <hr>
