Note to self for tomorrow

--- a/index.html
+++ b/index.html
@@ -23,3 +23,7 @@
         </div>
     </body>
 </html>
+
+<!-- Note to self:
+-Just saw how it looks in full screen. Need to fix where it sits on the screen
+-->
