--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;400&family=Karla:wght@400;500;600;700;800&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="./style.css">
-        <script src="index.js"></script>
     </head>
     <body>
         <div class="container">
@@ -14,13 +13,15 @@
                 <br>
             <span class="h1-color">random password</span></h1>
             <p id="sentence">Never use an insecure password again.</p>
-            <button>Generate Passwords</button>
+            <button onclick="renderPassword()">Generate Passwords</button>
             <hr>
             <div class="password-container">
-                <div id="password-one">doigpearh</div>
-                <div id="password-two">lajtpwie4</div>
+                <div id="password-one"></div>
+                <div id="password-two"></div>
             </div>
         </div>
+
+        <script src="index.js"></script>
     </body>
 </html>
 
