Modified event listener to allow a password limit set by the user

--- a/index.html
+++ b/index.html
@@ -13,7 +13,12 @@
                 <br>
             <span class="h1-color">random password</span></h1>
             <p id="sentence">Never use an insecure password again.</p>
-            <button onclick="renderPassword()">Generate Passwords</button>
+            <hr>
+
+            <p id="sentence">What is the required length of your password?</p>
+            <input id="password-length" name="password-length" type="text">
+            <br>
+            <button>Generate Passwords</button>
             <hr>
             <div class="password-container">
                 <div id="password-one"></div>
