Fixed some styling issues

--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
             <h1>Generate a
                 <br>
             <span class="h1-color">random password</span></h1>
-            <p id="sentence">Never use an insecure password again.</p>
+            <p id="sentence-one">Never use an insecure password again.</p>
             <hr>
-
-            <p id="sentence">What is the required length of your password?</p>
-            <input id="password-length" name="password-length" type="text">
-            <br>
+        
+            <p id="sentence-two">Password length: </p>
+            <input id="password-length" name="password-length" type="text" required>
+        
             <button>Generate Passwords</button>
             <hr>
             <div class="password-container">
