Fixed copy on click functionality for both buttons

--- a/index.html
+++ b/index.html
@@ -25,10 +25,9 @@
                 <div class="password-container__one" id="password-container__one"></div>
                     <button class="password-container__button-one" id="password-container__button-one">Copy</button>
                 
-                <div class="password-container__two" id="password-container__two">
+                <div class="password-container__two" id="password-container__two"></div>
                     <button class="password-container__button-two" id="password-container__button-two">Copy</button>
                 
-            </div>
         </div>
 
         <script src="index.js"></script>
