Stopping here so I can create a new branch. I want to work on toggling symbols and numbers through manipulating the array into an object

--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
                 <p class="heading__sentence-two" id="heading__sentence-two">Password length: 
                     <input id="password-length" name="password-length" type="text" required>
                 </p>
+
+                <label class="toggle-label symbols" for="symbols">Symbols</label>
+                    <input type="checkbox" name="symbols" id="symbols" class="checkbox" checked>
+                <label class="toggle-label numbers" for="numbers">Numbers</label>
+                    <input type="checkbox" name="numbers" id="numbers" class="checkbox" checked>
                 
             
                 <button class="btn password-button" id="password-button">Generate Passwords</button>
