--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
                     <button class="btn password-container__button-one" id="password-container__button-one">Copy</button>
                     <div class="copied-box hidden" id="password-one-hidden"></div>
                 
-                <div class="password-container__two" id="password-container__two"></div>
-                    <button class="btn password-container__button-two" id="password-container__button-two">Copy</button>
+                <div class="password-container__two" id="password-container__two">
+                    <button class="btn password-container__button-two" id="password-container__button-two">Copy</button></div>
                     <div class="copied-box hidden" id="password-two-hidden"></div>
                 
             </div>
