Changed input text to number to control password length

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <hr>
             
                 <p>Password length: 
-                    <input id="password-length" name="password-length" type="text" required>
+                    <input id="password-length" name="password-length" type="number" min="1" max="20" required>
                 </p>
 
                 <form>
