--- a/index.html
+++ b/index.html
@@ -44,13 +44,13 @@
             
             <div class="passwords-container">
                 <div id="password-container">
-                    <span class="password-one">jkuyfgfdfxkhgvkh5555</span>
-                    <div id="password-one-button">Copied</div>
+                    <span class="password-one"></span>
+                    <div id="password-one-button"></div>
                 </div>
                 
                 <div id="password-container">
-                    <span class="password-two">jytujsxtxkhgfvkhyf</span>
-                    <div id="password-two-button">Copied</div>
+                    <span class="password-two"></span>
+                    <div id="password-two-button"></div>
                 </div>
             </div>
         </div>
