--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             </div>
         </div>
 
-        <script src="index.js"></script>
+        <script src="index.js" type="module"></script>
     </body>
 </html>
 
