Have a possible function to filter out symbols and numbers

--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
               
 
                 <form>
-                    <label class="toggle-label-symbols" for="symbols">Symbols</label>
+                    <label class="symbols" for="symbols">Symbols</label>
                          <input 
                             type="checkbox" name="symbols" id="symbols" class="checkbox" checked
                         >
-                    <label class="toggle-label-numbers" for="numbers">Numbers</label>
+                    <label class="numbers" for="numbers">Numbers</label>
                         <input 
                             type="checkbox" name="numbers" id="numbers" class="checkbox" checked
                         >
@@ -44,12 +44,12 @@
             <div class="passwords-container">
                 <div class="password-container">
                     <span class="password-one"></span>
-                    <i  class=" fa-solid fa-check password-one-copied"></i>
+                    <i  class=" fa-solid fa-copy password-one-copied"></i>
                 </div>
                 
                 <div class="password-container">
                     <span class="password-two"></span>
-                    <i  class=" fa-solid fa-check password-two-copied"></i>
+                    <i  class=" fa-solid fa-copy password-two-copied"></i>
                 </div>
             </div>
         </div>
