--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
         <!-- Google Fonts -->
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;400&family=Karla:wght@400;500;600;700;800&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="./style.css">
+
+        <title>Generate a Password</title>
     </head>
     <body>
         <div class="root">
