--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;400&family=Karla:wght@400;500;600;700;800&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="./style.css">
 
+        <!-- Title -->
+        <link rel="shortcut icon" type="image/png" href="./img/key-icon.jpeg">
         <title>Generate a Password</title>
     </head>
     <body>
