Added icon and edited REAME to have correct checkboxes

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <link rel="stylesheet" href="./style.css">
 
         <!-- Title -->
-        <link rel="shortcut icon" type="image/png" href="./img/key-icon.jpeg">
+        <link rel="icon" type="image/png" href="./img/key-icon.jpeg">
         <title>Generate a Password</title>
     </head>
     <body>
