--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
         <link rel="icon" type="image/png" href="./img/key-icon.jpeg">
         <title>Generate a Password</title>
     </head>
-    <body class="light">
+    <body>
         <div class="root">
             <div class="heading">
-                <i id="toggle-button" class="fa-solid fa-moon"></i>
+                <i id="toggle-button" class="fa-solid fa-moon toggle"></i>
                 <h1>Generate a
                     <br>
                 <span>random password</span></h1>
